<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.media1.thesistest2.TourDetails">

        <!--<android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout> -->

        <include layout="@layout/content_tour_details" />
        <!--
            <TextView
                android:id="@+id/passed"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="h" /> -->

        <TextView
            android:id="@+id/tname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/TourNameText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tname"
            android:layout_marginTop="20dp"
            android:text="@string/TourDescText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--
        <TextView
            android:id="@+id/pimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:text="img name"
            android:textAppearance="?android:attr/textAppearanceMedium" /> -->

        <!--

        <ImageView
            android:id="@+id/imgid"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:layout_marginTop="36dp" />

        <ImageView
            android:id="@+id/mapimg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imgid" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imgid"
            android:layout_marginTop="42dp" /> -->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tdescription"
            android:layout_marginTop="18dp"

            android:text="@string/tourPlaces"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_view5"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_below="@+id/textView6"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/tnvgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_view5"
            android:layout_centerHorizontal="true"
            android:text="@string/StartTourBtn" />



    </RelativeLayout>
</ScrollView>
