<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#58d2ab"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.media1.thesistest2.MainMenu">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="70dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/mapsButton"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/mapicon2"
                android:onClick="onMapsClick" />

            <ImageButton
                android:id="@+id/nothere2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mapicon2"
                android:clickable="false"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/placesButton"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/placesicon3"
                android:onClick="onPlacesClick" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/mapText"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/nothere4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mapicon2"
                android:clickable="false"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/placesText"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/nothere"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mapicon2"
                android:clickable="false"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/nearbyButton"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/nearbyicon"
                android:onClick="onNearbyClick" />

            <ImageButton
                android:id="@+id/nothere3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mapicon2"
                android:clickable="false"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/toursButton"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/toursicon"
                android:onClick="onToursClick" />

        </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nearbyText"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/nothere5"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mapicon2"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toursText"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    </TableLayout>

</RelativeLayout>
